--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-qr-barcode-scanner": "^2.1.19",
     "react-router-dom": "6.14.1",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "@vitejs/plugin-react": "^4.1.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "10.4.14",
     "postcss": "8.4.24",
     "tailwindcss": "^3.3.5",
